# payrollsoft

./: .env.example  .env.pgsql.example  .gitignore  CLAUDE.md  IMPLEMENTATION-PLAN.md  PROJECT-STATUS.md  README.md  biome.json  docker-compose.dev.yml  package.json  tsconfig.json  turbo.json
apps/api/: package.json
apps/api/src/: index.ts
apps/desktop/: README.md  package.json  turbo.json
apps/desktop/scripts/: build-dist.mjs  dev-guard.mjs
apps/desktop/src/: index.html
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: .env.example  .gitignore  NOTES.md  README.md  capacitor.config.ts  index.html  package.json  tsconfig.json  turbo.json  vite.config.ts
apps/mobile/src/: App.tsx  (+2 more)
apps/web/: astro.config.mjs  package.json  tailwind.config.mjs
docs/: DEPLOYMENT-ORACLE-FREE-TIER.md  DEPLOYMENT-UBUNTU-22.04.md  EMPLOYEES-POSITIONS-EXTENSIONS-PHASE1.md  FACIAL-RECOGNITION.md  PGVECTOR-WINDOWS.md  RBAC-RUNBOOK.md  STANDARDIZATION-REPORT.md  VALIDACION-CREACION-EMPRESA.md  attendance-sync.md  dependents-family-disability.md  photo-face-enrollment.md  sample-biometric.txt
docs/security/: AUDIT_API_2026-06.md  AUDIT_DESKTOP_2026-06.md  AUDIT_MOBILE_2026-06.md  AUDIT_SUMMARY_2026-06.md  AUDIT_WEB_2026-06.md
scripts/: cron-compensatory-init.sh  cron-consolidate.sh  facial-setup.ps1  facial-setup.sh  https-proxy.mjs  local-https.ps1  local-https.sh  setup-husky.mjs  time-balance-backfill.sh
(+466 files in other folders)
