[package]
name = "payroll-desktop"
version = "0.0.1"
description = "PayrollSoft desktop shell (Tauri 2)"
edition = "2021"
rust-version = "1.77"

[lib]
name = "payroll_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
url = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
