[package]
name = "payroll-desktop"
version = "0.0.1"
description = "PayrollSoft desktop shell (Tauri 2)"
edition = "2021"
rust-version = "1.77"

[lib]
name = "payroll_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# DevTools are always compiled into debug builds via #[cfg(debug_assertions)];
# enable this feature on release builds (e.g. internal QA) to ship a binary
# with DevTools toggle available from the Ver menu.
devtools = ["tauri/devtools"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
url = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
